<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_pantry"
        android:icon="@drawable/ic_baseline_kitchen_24"
        android:title="@string/title_pantry" />
    <item
        android:id="@+id/navigation_camera"
        android:icon="@drawable/ic_baseline_camera_enhance_24"
        android:title="@string/title_camera" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_baseline_thumb_up_24"
        android:title="@string/title_like" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/title_account" />


</menu>